--- a/acs/.vscode/launch.json
+++ b/acs/.vscode/launch.json
@@ -1,6 +1,7 @@
 {
   "version": "0.2.0",
-  "configurations": [{
+  "configurations": [
+    {
       "name": "segA1 debug",
       "type": "cppdbg",
       "request": "launch",
@@ -21,5 +22,28 @@
       }],
       "miDebuggerPath": "/usr/bin/gdb-multiarch",
       "miDebuggerServerAddress": "${config:AM64.TARGET_IP}:3000",
+  },
+
+  {
+    "name": "GLC debug",
+    "type": "cppdbg",
+    "request": "launch",
+    "program": "${config:GLC.LOCAL_BIN_DIR}/${config:GLC.PROGRAM}",
+    "args": [],
+    "stopAtEntry": true,
+    "cwd": "${workspaceFolder}",
+    "environment": [],
+    /* "console": "integratedTerminal", */
+    "externalConsole": false,
+    "MIMode": "gdb",
+    "targetArchitecture": "x86_64",
+    "preLaunchTask": "deploy-gdb-glc",
+    "setupCommands": [{
+        "description": "Enable pretty-printing for gdb",
+        "text": "-enable-pretty-printing",
+        "ignoreFailures": true
+    }],
+    "miDebuggerPath": "/usr/bin/gdb-multiarch",
+    "miDebuggerServerAddress": "${config:GLC.TARGET_IP}:3000",
   }]
 }
