--- a/acs/.vscode/tasks.json
+++ b/acs/.vscode/tasks.json
@@ -33,6 +33,32 @@
           ],
           "dependsOn": ["build"],
       },
+
+      {
+        "label": "deploy-gdb-glc",
+        "isBackground": true,
+        "problemMatcher":{
+            "base": "$gcc",
+            "background": {
+                "activeOnStart": true,
+                "beginsPattern":  "Deploying to target",
+                "endsPattern":  "Starting GDB Server on Target"
+            }
+        },
+        "type": "shell",
+        "command": "sh",
+        "args": [
+            "deploy-gdb.sh",
+            "${config:GLC.TARGET_IP}",
+            "${config:GLC.PROGRAM}",
+            "${config:GLC.TARGET_BIN_DIR}",
+            "${config:GLC.TARGET_USERNAME}",
+            "${config:GLC.LOCAL_BIN_DIR}"
+        ],
+        "dependsOn": ["build"],
+      },
+
+
       /* Configure Build Task */
       {
         "label": "build",
