--- a/acs/.vscode/settings.json
+++ b/acs/.vscode/settings.json
@@ -10,6 +10,7 @@
 
     /* Project Settings */
     "PROGRAM":"lscs_tstsrv_am64x",
+    "PROGRAM_ARGS":" ",
     "LOCAL_BIN_DIR":"net_am64x/",
 
     /* Yocto SDK Configuration */
@@ -27,6 +28,7 @@
 
     /* Project Settings */
     "PROGRAM":"tstcli3",
+    "PROGRAM_ARGS":"-h 10.0.1.1 -s app_srv19",
     "LOCAL_BIN_DIR":"net/",
   },
 
@@ -40,6 +42,7 @@
 
     /* Project Settings */
     "PROGRAM":"rtc_tstcli_am64x",
+    "PROGRAM_ARGS":" ",
     "LOCAL_BIN_DIR":"net-bench/",
   },
 
@@ -53,6 +56,7 @@
 
     /* Project Settings */
     "PROGRAM":"rtc_tstcli_am64x",
+    "PROGRAM_ARGS":" ",
     "LOCAL_BIN_DIR":"net-bench/",
   },
 
@@ -66,6 +70,7 @@
 
     /* Project Settings */
     "PROGRAM":"rtc_tstcli_am64x",
+    "PROGRAM_ARGS":" ",
     "LOCAL_BIN_DIR":"net-bench/",
   },
 }
