--- a/acs/.vscode/settings.json
+++ b/acs/.vscode/settings.json
@@ -27,9 +27,9 @@
     "TARGET_USERNAME": "brad",
 
     /* Project Settings */
-    "PROGRAM":"tstcli3",
+    "PROGRAM":"rtc_tstcli",
     "PROGRAM_ARGS":"-h 10.0.1.1 -s app_srv19",
-    "LOCAL_BIN_DIR":"net/",
+    "LOCAL_BIN_DIR":"net-bench/",
   },
 
   "SECTORSIM": {
@@ -41,7 +41,7 @@
     "TARGET_USERNAME": "brad",
 
     /* Project Settings */
-    "PROGRAM":"rtc_tstcli_am64x",
+    "PROGRAM":"lscs_tstsrv",
     "PROGRAM_ARGS":" ",
     "LOCAL_BIN_DIR":"net-bench/",
   },
@@ -55,7 +55,7 @@
     "TARGET_USERNAME": "brad",
 
     /* Project Settings */
-    "PROGRAM":"rtc_tstcli_am64x",
+    "PROGRAM":"lscs_tstsrv",
     "PROGRAM_ARGS":" ",
     "LOCAL_BIN_DIR":"net-bench/",
   },
@@ -69,7 +69,7 @@
     "TARGET_USERNAME": "brad",
 
     /* Project Settings */
-    "PROGRAM":"rtc_tstcli_am64x",
+    "PROGRAM":"lscs_tstsrv",
     "PROGRAM_ARGS":" ",
     "LOCAL_BIN_DIR":"net-bench/",
   },
