--- a/acs/.vscode/tasks.json
+++ b/acs/.vscode/tasks.json
@@ -36,7 +36,7 @@
       },
 
       {
-        "label": "deploy-gdb-glc",
+        "label": "deploy-gdb-glc_sega1",
         "isBackground": true,
         "problemMatcher":{
             "base": "$gcc",
@@ -50,12 +50,37 @@
         "command": "sh",
         "args": [
             "deploy-gdb.sh",
-            "${config:GLC.TARGET_IP}",
-            "${config:GLC.PROGRAM}",
-            "${config:GLC.PROGRAM_ARGS}",
-            "${config:GLC.TARGET_BIN_DIR}",
-            "${config:GLC.TARGET_USERNAME}",
-            "${config:GLC.LOCAL_BIN_DIR}"
+            "${config:GLC_SegA1.TARGET_IP}",
+            "${config:GLC_SegA1.PROGRAM}",
+            "${config:GLC_SegA1.PROGRAM_ARGS}",
+            "${config:GLC_SegA1.TARGET_BIN_DIR}",
+            "${config:GLC_SegA1.TARGET_USERNAME}",
+            "${config:GLC_SegA1.LOCAL_BIN_DIR}"
+        ],
+        "dependsOn": ["build"],
+      },
+
+      {
+        "label": "deploy-gdb-glc_segsim",
+        "isBackground": true,
+        "problemMatcher":{
+            "base": "$gcc",
+            "background": {
+                "activeOnStart": true,
+                "beginsPattern":  "Deploying to target",
+                "endsPattern":  "Starting GDB Server on Target"
+            }
+        },
+        "type": "shell",
+        "command": "sh",
+        "args": [
+            "deploy-gdb.sh",
+            "${config:GLC_SegSim.TARGET_IP}",
+            "${config:GLC_SegSim.PROGRAM}",
+            "${config:GLC_SegSim.PROGRAM_ARGS}",
+            "${config:GLC_SegSim.TARGET_BIN_DIR}",
+            "${config:GLC_SegSim.TARGET_USERNAME}",
+            "${config:GLC_SegSim.LOCAL_BIN_DIR}"
         ],
         "dependsOn": ["build"],
       },
