Separate printf thread for each client

--- a/acs/.vscode/settings.json
+++ b/acs/.vscode/settings.json
@@ -43,7 +43,22 @@
     /* Project Settings */
     "PROGRAM":"rtc_tstcli",
     /* "PROGRAM_ARGS":"-s app_srv19 -h 10.4.0.3", */
-    "PROGRAM_ARGS":"-f HostListOneLine.txt",
+    "PROGRAM_ARGS":"-f HostListSegSim.txt",
+    "LOCAL_BIN_DIR":"../bin/",
+  },
+
+  "GLC_SectorSim": {
+    /* Site-specific Settings */
+    
+    /* Target Settings */
+    "TARGET_IP":"10.0.0.1",
+    "TARGET_BIN_DIR":"/home/brad/bin",	
+    "TARGET_USERNAME": "brad",
+
+    /* Project Settings */
+    "PROGRAM":"rtc_tstcli",
+    /* "PROGRAM_ARGS":"-s app_srv19 -h 10.4.0.3", */
+    "PROGRAM_ARGS":"-t 90 -f HostListSectorSim.txt",
     "LOCAL_BIN_DIR":"../bin/",
   },
 
