Now corrects for TAI offset in timestamp samples

--- a/acs/.vscode/settings.json
+++ b/acs/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+  "C_Cpp.default.cppStandard": "c++20",
+  "C_Cpp.default.cStandard": "c17",
   "SEGA1": {
     /* Site-specific Settings */
     "SDK_PATH":"/opt/ti/arago-2021.09-aarch64",
